--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="flex">
             <div class="logo">
-                <a href="#"><img src="images/" alt="Game Shop logo"></a>
+                <a href="#"><img src="" alt="Game Shop logo"></a>
             </div>
             <nav>
                 <button id="nav-toggle" class="hamburger-menu">
