--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Game Shop Template</title>
+    <title>Game Site Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -12,7 +12,7 @@
     <header>
         <div class="flex">
             <div class="logo">
-                <a href="#"><img src="" alt="Game Shop logo"></a>
+                <a href="#"><img src="" alt="Logo"></a>
             </div>
             <nav>
                 <button id="nav-toggle" class="hamburger-menu">
